--- a/loisir.css
+++ b/loisir.css
@@ -180,6 +180,7 @@ header {
     text-align: left;
     margin-bottom: 40px;
     width: 80%;
+    /* biome-ignore lint/suspicious/noShorthandPropertyOverrides: <explanation> */
     margin: 40px auto;
     border: 1px solid var(--couleur3);
     border-radius: 8px;
@@ -242,7 +243,8 @@ header {
     border-radius: 8px 0px 0px 8px;
     margin-bottom: 100px;
     /* padding-bottom: -200px; */
-    margin: 0;
+    /* biome-ignore lint/suspicious/noShorthandPropertyOverrides: <explanation> */
+        margin: 0;
     display: block;
 
     @media screen and (max-width: 1130px) {
@@ -394,4 +396,20 @@ button:hover {
     background-color: var(--couleur3);
     color: var(--couleur1);
     transition: ease-in-out 0.2s;
+}
+footer{
+    background-color: #334A5E;
+    width: 100%;
+    height: auto;
+    color: #fff;
+    display: flex;
+    flex-direction:column;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5rem;
+    padding: 10px 0;
+    margin-bottom: 0;
+    /* margin-top: 1.5rem; */
+    font-family:  "Montserrat", sans-serif;
+    font-size: 0.8rem;
 }
