--- a/culture.css
+++ b/culture.css
@@ -59,15 +59,7 @@ header {
 
     }
 }
-.burger-menu{
-    width: 100px;
-    height: 100px;
-    position: absolute;
-    right: 10px;
-    top: 10PX;
-    z-index: 10;
-    display: none;
-}
+
 #countdown-container {
     text-align: center;
     margin-top: 20px;
@@ -87,8 +79,8 @@ nav {
     color: white;
     align-items: center;
     justify-content: space-between;
-    width: 90vh;
-    padding: 10px 2rem;
+    max-width: 75vh;
+    padding: 5px 1.5rem;
     border-radius: 50px;
     background-color: rgba(29, 42, 53, 0.7);
     backdrop-filter: blur(3px);
@@ -96,14 +88,13 @@ nav {
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.1);
     position: fixed;
     top: 10px;
-    left: 50%;
+    /* left: 50%; */
     transform: translateX(-50%);
     z-index: 100;
     transition: all 0.3s ease;
     
 }
 
-nav
 
 nav p {
     font-size: 1.5rem;
@@ -220,7 +211,7 @@ h2 {
     color: #fff;
     font-family: var(--font-family-h);
     width: 80%;
-    margin: 0 auto;
+   
 
 }
 
@@ -293,7 +284,7 @@ h2 {
         width: 50%;
         min-height: 250px;
         border: inset 2px rgba(255, 255, 255, 0.429);
-        opacity: 0.5;
+        opacity: 0.7;
         transition: ease-in-out 0.4s; /* Ajout ici pour l'effet hover */
         &:hover{
             transform: scale(1.1); /* Utilisez transform pour l'effet de mise à l'échelle */
@@ -328,10 +319,9 @@ h2 {
     height: auto;
     width: 80%;
     margin: 0 auto;
-
     img {
         width: 50%;
-        height: 100%;
+        height: 300px;
         border-radius: 10px;
     }
 
@@ -383,7 +373,7 @@ h2 {
         width: 50%;
         min-height: 250px;
         border: inset 2px rgba(255, 255, 255, 0.429);
-        opacity: 0.5;
+        opacity: 0.7;
         transition: ease-in-out 0.4s; /* Ajout ici pour l'effet hover */
         &:hover{
             transform: scale(1.1); /* Utilisez transform pour l'effet de mise à l'échelle */
@@ -419,12 +409,17 @@ footer{
     flex-direction:column;
     justify-content: center;
     align-items: center;
-    gap: 0.5rem;
-    padding: 10px 0;
+    gap: 0.2rem;
+    padding: 5px 0;
     margin-bottom: 0;
     /* margin-top: 1.5rem; */
     font-family:  "Montserrat", sans-serif;
-    font-size: 0.8rem;
+    font-size: 0.9rem;
+    img{
+        width: 100px;
+        height: 80px;
+        margin: 0;
+    }
 }
 
 /* responsive */
@@ -500,7 +495,7 @@ footer{
 
         img {
             width: 100%;
-            height: 100%;
+            height: 350px;
             border-radius: 10px;
         }
 
